# RespiraAlly_v2

./: .env.example  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CLAUDE_TEMPLATE.md  PROJECT_README.md  README.md  README.zh-TW.md  commitlint.config.js  docker-compose.yml  package-lock.json  package.json
.claude/: CROSS_PLATFORM_COMPATIBILITY.md  taskmaster.js
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  test_event_system.py
backend/alembic/: env.py
backend/alembic/versions/: 002_add_patient_health_fields.sql  003_enhance_kpi_cache_and_views.sql  004_add_ai_processing_logs.sql  005_create_risk_engine_tables.sql  2025_10_20_0110-2c0639c3091b_initial_schema_users_profiles_daily_.py  2025_10_22_0426-4741100a10d7_redesign_daily_log_schema_flexible_.py  2025_10_24_1320-add_supervisor_admin_roles.py
backend/docs/: LOCAL_DEVELOPMENT.md
backend/scripts/: generate_test_data.py  migrate_schemas.py  seed_supervisor.py
backend/src/respira_ally/: __init__.py  main.py
backend/src/respira_ally/api/v1/routers/: __init__.py  auth.py  daily_log.py  exacerbation.py  notification.py  patient.py  rag.py  risk.py  survey.py
backend/src/respira_ally/application/auth/use_cases/: __init__.py  login_use_case.py  logout_use_case.py  refresh_token_use_case.py  register_use_case.py
backend/src/respira_ally/application/daily_log/: daily_log_service.py
backend/src/respira_ally/application/exacerbation/: __init__.py  exacerbation_service.py
backend/src/respira_ally/application/patient/: kpi_service.py  patient_service.py
backend/src/respira_ally/application/risk/schemas/: risk_schemas.py
backend/src/respira_ally/application/risk/use_cases/: calculate_risk_use_case.py
backend/src/respira_ally/application/survey/: survey_service.py
backend/src/respira_ally/core/: authorization.py  config.py  dependencies.py
backend/src/respira_ally/core/exceptions/: __init__.py  application_exceptions.py  http_exceptions.py
backend/src/respira_ally/core/schemas/: __init__.py  auth.py  daily_log.py  exacerbation.py  kpi.py  patient.py  survey.py
backend/src/respira_ally/core/security/: __init__.py  jwt.py
backend/src/respira_ally/domain/events/: daily_log_events.py  patient_events.py  survey_events.py
backend/src/respira_ally/domain/exceptions/: __init__.py  domain_exceptions.py
backend/src/respira_ally/domain/repositories/: daily_log_repository.py  patient_repository.py  survey_repository.py  user_repository.py
backend/src/respira_ally/domain/services/: cat_scorer.py  mmrc_scorer.py
backend/src/respira_ally/infrastructure/cache/: __init__.py  idempotency_service.py  login_lockout_service.py  redis_client.py  token_blacklist_service.py
backend/src/respira_ally/infrastructure/database/: session.py
backend/src/respira_ally/infrastructure/message_queue/: in_memory_event_bus.py
backend/src/respira_ally/infrastructure/repositories/: __init__.py  patient_repository_impl.py  user_repository_impl.py
backend/src/respira_ally/infrastructure/repository_impls/: __init__.py  daily_log_repository_impl.py  patient_repository_impl.py  survey_repository_impl.py  user_repository_impl.py
backend/tests/: conftest.py
backend/tests/integration/api/: test_auth_api.py  test_daily_log_api.py  test_daily_log_idempotency.py  test_patient_api.py  test_patient_api_update_delete.py  test_survey_api.py
backend/tests/integration/database/: test_patient_repository.py
backend/tests/unit/: test_jwt.py
backend/tests/unit/application/auth/: test_register_use_case.py
backend/tests/unit/infrastructure/cache/: test_login_lockout_service.py
backend/tests/unit/schemas/: test_daily_log_validators.py
(+220 files in other folders)
